[package]
name = "sif-itree"
description = "simple, immutable, flat interval tree"
version = "0.2.3"
edition = "2021"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/sif-itree"
repository = "https://github.com/adamreichold/sif-kdtree"
keywords = ["interval", "tree"]
categories = ["data-structures", "date-and-time"]

[dev-dependencies]
proptest = "1.4"

[dependencies]
rayon = { version = "1.8", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
